--- a/templates/catalog_list.html
+++ b/templates/catalog_list.html
@@ -13,7 +13,7 @@ Defect
     <div class="col p-4">
       <h2 style="color: #ff7000;">{{ defect_list[0].defect_name }}</h2><br>
       <p>id: {{ catalog_list.id }}</p>
-      <p>Операция: {{ catalog_list.operation }}</p>
+      <p>Операция: {{  operation_list[0].operation_name }}</p>
   <!--    <p>Артикул: {{ catalog_list.article }}</p>
       <p>Наименование: {{ catalog_list.name }}</p>  -->
 	<p>Изделие:  {{ catalog_list.product_name }}</p>
