--- a/templates/base.html
+++ b/templates/base.html
@@ -91,7 +91,7 @@ text-decoration: none;
             <a class="nav-link" href="/show_operation">ДЕФЕКТЫ ПО ОПЕРАЦИЯМ</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">ДЕФЕКТЫ ПО ИЗДЕЛИЯМ</a>
+            <a class="nav-link" href="/show_product">ДЕФЕКТЫ ПО ИЗДЕЛИЯМ</a>
           </li>
           <!--<li class="nav-item">
             <a class="nav-link" href="/show">SHOW</a>
