--- a/templates/operation_update.html
+++ b/templates/operation_update.html
@@ -56,7 +56,7 @@ td {
 <form method="post" id="2">
         <div class="col-md-6">
             <div class="form-group">
-                <h2>Измените наименование дефекта</h2>
+                <h2>Измените наименование операции</h2>
                {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
                 {% for category, message in messages %}
@@ -66,12 +66,13 @@ td {
                 {% endwith %}
 
                 
-                    <label>Измените наименование дефекта: </label>
-                    <input type="text" name="defect_name" id="defect_name" class="form-control"
-                        placeholder="{{ defect_list.defect_name }}"><br>
-
-
+                    <label>Введите наименование операции: </label>
                     
+                    <input type="text" name="operation_name" id="operation_name" class="form-control"
+                        placeholder="{{ operation_list.operation_name }}"><br> 
+
+
+ 
 
 
 
@@ -83,16 +84,16 @@ td {
 <br>
 <div class="col-md-11">
 {% if catalog.count() == 1 %}
-<h5>Данное наименование дефекта участвует в {{catalog.count()}} связанной записи. </h5>
-<h5>При изменении наименование дефекта изменится и в указанной записи.</h5>
+<h5>Данная операция участвует в {{catalog.count()}} связанной записи. </h5>
+<h5>При изменении операция изменится и в указанной записи.</h5>
 <h5 class="text-danger">Внимание! При удалении указанная запись полностью удалится без возможности восстановления.</h5>
 
 {% elif catalog.count() == 0 %}
-<h5>Данное наименование дефекта участвует в {{catalog.count()}} связанной записи </h5>
+<h5>Данная операция участвует в {{catalog.count()}} связанной записи </h5>
 
 {% else %}
-<h5>Данное наименование дефекта участвует в {{catalog.count()}} связанных записях.  </h5>
-<h5>При изменении наименование дефекта изменится и в указанных записях.</h5>
+<h5>Данная операция участвует в {{catalog.count()}} связанных записях.  </h5>
+<h5>При изменении операция изменится и в указанных записях.</h5>
 <h5 class="text-danger">Внимание! При удалении указанные записи полностью удалятся без возможности восстановления.</h5>
 {%  endif %}
 <hr>
@@ -112,8 +113,8 @@ td {
       {% for i in catalog %}
       <tr onclick="window.location.href='/catalog_list/{{ i[0].id }}/update'; return false">
         <td>{{ i[3] }}</td>
-        <td class="text-danger">{{ i[1] }}</td>
-        <td>{{ i[2] }}</td>
+        <td>{{ i[1] }}</td>
+        <td class="text-danger">{{ i[2] }}</td>
         <td style="width:25%">{{ i[0].note }}</td>
         <td style="width:10%"><img src="/{{ i[0].picture }}" class="img-thumbnail" alt=""
             style=" max-width: 100%;  height: auto;"></td>
@@ -129,7 +130,7 @@ td {
 </div>
 <br>
 <input type="submit" class="btn btn-outline-secondary" value="Изменить">
-<a href="/defect/{{ defect_list.id }}/del" class="btn btn-outline-danger">Удалить</a>
+<a href="/operation/{{ operation_list.id }}/del" class="btn btn-outline-danger">Удалить</a>
 
 </div>
 </form>
