--- a/templates/catalog_list.html
+++ b/templates/catalog_list.html
@@ -11,12 +11,11 @@ Defect
 
 
     <div class="col p-4">
-      <h2 style="color: #ff7000;">{{ defect_list[0].defect_name }}</h2><br>
-      <p>id: {{ catalog_list.id }}</p>
+      <h2 class="text-danger">{{ defect_list[0].defect_name }}</h2><br>
       <p>Операция: {{  operation_list[0].operation_name }}</p>
   <!--    <p>Артикул: {{ catalog_list.article }}</p>
       <p>Наименование: {{ catalog_list.name }}</p>  -->
-	<p>Изделие:  {{ catalog_list.product_name }}</p>
+	<p>Изделие:  {{ product_list[0].general_name }}</p>
       {% if catalog_list.defect_type == 1 %}
 		<p>Допустимость: <a style="color:green;">ДЕФЕКТ ДОПУСТИМ</a></p>
 		{% elif catalog_list.defect_type == 0 %}
@@ -24,13 +23,15 @@ Defect
 {% else %}
 	<p>Допустимость: <a style="color:grey;">ДОПУСТИМОСТЬ НЕ ОПРЕДЕЛЕНА</a></p>
 	{% endif %}
-      <p>Комментарий: {{ catalog_list.note }}</p>
+      <p style="word-break: break-all;">Комментарий: {{ catalog_list.note }}</p>
+<hr>
+	<p class="text-secondary">ID:{{ catalog_list.id }} Дата записи: {{ catalog_list.date.strftime('%Y-%m-%d') }}      </p>
  </div>
 
 
 
      <a href="/show_catalog" class="btn btn-outline-secondary">Назад</a>
-        <a href="/catalog_list/{{ catalog_list.id }}/del" class="btn btn-outline-secondary">Удалить</a>
+        <a href="/catalog_list/{{ catalog_list.id }}/del" class="btn btn-outline-danger">Удалить</a>
         <a href="/catalog_list/{{ catalog_list.id }}/update" class="btn btn-outline-secondary">Редактировать</a>
     
 {% endblock %}
