--- a/templates/defect_update.html
+++ b/templates/defect_update.html
@@ -79,7 +79,7 @@ td {
         </div>
 <!---------------------------------------------------------------------------------------->
 
-<br>
+
 <br>
 <div class="col-md-11">
 {% if catalog.count() == 1 %}
@@ -128,14 +128,33 @@ td {
   </table>
 </div>
 <br>
-<input type="submit" class="btn btn-outline-secondary" value="Изменить">
-<a href="/defect/{{ defect_list.id }}/del" class="btn btn-outline-danger">Удалить</a>
-
+		<div class="btn pb-4" >		
+			<input type="submit" class="btn btn-outline-secondary" value="Изменить">
+			<a href="/defect/{{ defect_list.id }}/del" class="btn btn-outline-danger">Удалить</a>
+		</div>
 </div>
 </form>
 <!---------------------------------------------------------------------------------------->
 
 <script>
+window.onload = function () {
+  Height();
+};
+window.onresize = function () {
+    Height();
+  };
 
+function Height (){
+	let divTable =document.querySelector('.tableFixHead');
+	let bodyHeight = document.documentElement.clientHeight
+
+	//if (divTable.clientHeight > 150){
+	if (bodyHeight > 665){
+		divTable.style.height = (bodyHeight - divTable.offsetTop - 100) +'px';
+		}
+	else {
+		divTable.style.height = 200+"px";
+		}
+	};
 </script>
 {% endblock %}
