--- a/templates/operation_update.html
+++ b/templates/operation_update.html
@@ -12,7 +12,8 @@ Update defect
   /* Стиль фиксации шапки таблицы */
   .tableFixHead {
     overflow-y: auto;
-    height: 45vh;
+    /*height:351px /*40vh;*/
+
   }
 
   .tableFixHead thead th {
@@ -80,7 +81,7 @@ td {
         </div>
 <!---------------------------------------------------------------------------------------->
 
-<br>
+
 <br>
 <div class="col-md-11">
 {% if catalog.count() == 1 %}
@@ -129,14 +130,34 @@ td {
   </table>
 </div>
 <br>
-<input type="submit" class="btn btn-outline-secondary" value="Изменить">
-<a href="/operation/{{ operation_list.id }}/del" class="btn btn-outline-danger">Удалить</a>
-
+		<div class="btn pb-4" >
+			<input type="submit" class="btn btn-outline-secondary" value="Изменить">
+			<a href="/operation/{{ operation_list.id }}/del" class="btn btn-outline-danger">Удалить</a>
+		</div>
 </div>
 </form>
 <!---------------------------------------------------------------------------------------->
 
 <script>
 
+window.onload = function () {
+  Height();
+};
+window.onresize = function () {
+    Height();
+  };
+
+function Height (){
+	let divTable =document.querySelector('.tableFixHead');
+	let bodyHeight = document.documentElement.clientHeight
+
+	//if (divTable.clientHeight > 150){
+	if (bodyHeight > 665){
+		divTable.style.height = (bodyHeight - divTable.offsetTop - 100) +'px';
+		}
+	else {
+		divTable.style.height = 200+"px";
+		}
+	};
 </script>
 {% endblock %}
