--- a/templates/product_update.html
+++ b/templates/product_update.html
@@ -2,7 +2,7 @@
 
 
 {% block title %}
-Update defect
+Update product
 {% endblock %}
 
 
@@ -57,7 +57,7 @@ td {
 <form method="post" id="2">
         <div class="col-md-6">
             <div class="form-group">
-                <h2>Измените наименование операции</h2>
+                <h2>Измените информацию по изделию</h2>
                {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
                 {% for category, message in messages %}
@@ -67,13 +67,14 @@ td {
                 {% endwith %}
 
                 
-                    <label>Введите наименование операции: </label>
-                    
-                    <input type="text" name="operation_name" id="operation_name" class="form-control"
-                        placeholder="{{ operation_list.operation_name }}"><br> 
+                  
+					<label>Введите номер изделия: </label>
+                    	<input type="text" name="article_number" id="article_number" class="form-control"
+                        placeholder="{{ product_list.article_number }}"><br>
 
-
- 
+                    <label>Введите наименование изделия: </label>
+                    	<input type="text" name="article_name" id="article_name" class="form-control"
+                        	placeholder="{{ product_list.article_name }}"><br>
 
 
 
@@ -85,16 +86,16 @@ td {
 <br>
 <div class="col-md-11">
 {% if catalog.count() == 1 %}
-<h5>Данная операция участвует в {{catalog.count()}} связанной записи. </h5>
-<h5>При изменении информация по операции изменится и в указанной записи.</h5>
+<h5>Данное изделие участвует в {{catalog.count()}} связанной записи. </h5>
+<h5>При изменении информация по изделию изменится и в указанной записи.</h5>
 <h5 class="text-danger">Внимание! При удалении указанная запись полностью удалится без возможности восстановления.</h5>
 
 {% elif catalog.count() == 0 %}
-<h5>Данная операция участвует в {{catalog.count()}} связанной записи </h5>
+<h5>Данное изделие участвует в {{catalog.count()}} связанной записи </h5>
 
 {% else %}
-<h5>Данная операция участвует в {{catalog.count()}} связанных записях.  </h5>
-<h5>При изменении информация по операции изменится и в указанных записях.</h5>
+<h5>Данное изделие участвует в {{catalog.count()}} связанных записях.  </h5>
+<h5>При изменении информация по изделию изменится и в указанных записях.</h5>
 <h5 class="text-danger">Внимание! При удалении указанные записи полностью удалятся без возможности восстановления.</h5>
 {%  endif %}
 <hr>
@@ -113,9 +114,9 @@ td {
 
       {% for i in catalog %}
       <tr onclick="window.location.href='/catalog_list/{{ i[0].id }}/update'; return false">
-        <td>{{ i[3] }}</td>
+        <td class="text-danger">{{ i[3] }}</td>
         <td>{{ i[1] }}</td>
-        <td class="text-danger">{{ i[2] }}</td>
+        <td>{{ i[2] }}</td>
         <td style="width:25%">{{ i[0].note }}</td>
         <td style="width:10%"><img src="/{{ i[0].picture }}" class="img-thumbnail" alt=""
             style=" max-width: 100%;  height: auto;"></td>
@@ -132,7 +133,7 @@ td {
 <br>
 		<div class="btn pb-4" >
 			<input type="submit" class="btn btn-outline-secondary" value="Изменить">
-			<a href="/operation/{{ operation_list.id }}/del" class="btn btn-outline-danger">Удалить</a>
+			<a href="/product/{{ product_list.id }}/del" class="btn btn-outline-danger">Удалить</a>
 		</div>
 </div>
 </form>
